# conway

./: CMakeLists.txt  board.cpp  board.h  cell.cpp  cell.h  main.cpp  point.cpp
include/: board.h  cell.h  point.h
scripts/: watch.sh
